--- a/resources/assets/sass/_settings.scss
+++ b/resources/assets/sass/_settings.scss
@@ -234,9 +234,9 @@ $list-nested-side-margin: rem(20);
 $defnlist-margin-bottom: rem(16);
 $defnlist-term-weight: $global-weight-bold;
 $defnlist-term-margin-bottom: rem(5);
-$blockquote-color: $dark-gray;
-$blockquote-padding: rem(9 20 0 19);
-$blockquote-border: 1px solid $medium-gray;
+$blockquote-color: currentColor;
+$blockquote-padding: rem(0 20 0 19);
+$blockquote-border: 1px solid $light-gray;
 $cite-font-size: rem(13);
 $cite-color: $dark-gray;
 $keystroke-font: $font-family-monospace;
