--- a/resources/assets/sass/components/_mediabox.scss
+++ b/resources/assets/sass/components/_mediabox.scss
@@ -27,7 +27,8 @@
     text-transform: uppercase;
   }
 
-  h2 {
+  h3 {
+    font-size: rem(32);
     line-height: 1.1;
     text-transform: uppercase;
   }
