--- a/resources/assets/sass/components/_stripe.scss
+++ b/resources/assets/sass/components/_stripe.scss
@@ -5,9 +5,9 @@
   }
   > .row {
     background-color: $white;
-    // box-shadow: 0 1px 3px rgba(0,0,0,.26);
     box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
     margin-bottom: rem-calc(30px);
+    width: 100%;
 
     .row {
       margin-left: 0;
